# Consumer-producer

./: CMakeLists.txt  TASK1a  TASK1a.c  TASK1a.h  TASK1a.txt  TASK1b  TASK1b.c  TASK1b.txt  TASK1bDebug.c  TASK1bFprintf  TASK2a.c  TASK2a.txt  TASK2aDebug.c  TASK2b.c  TASK2b.txt  TASK2bDebug.c  a.txt  a2.txt  a3.txt  coursework.c  coursework.h  linkedlist.h  task1bFprintf.c  testMemory.out  testProject.c  testTask2
sample_output/: task2a.txt  task2b.txt
